test(Service, Controller, TestData): refactor tests for new API, add new tests for more full coverage